welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: Missing closing brace `}' assumed here
for (x<-0 to 6) {
^